favicon, added navigation bar, change footer, added announcement and edited the header part

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11285,4 +11285,8 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
-}
+
+  .logo{
+    background-position: center;
+    width: 300px;
+  }
